Fix alignment, update header again...

--- a/src/base.css
+++ b/src/base.css
@@ -19,7 +19,12 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     font-weight: normal;
 }
-
+h1 {
+    font-size: 5rem;
+}
+h2 {
+    font-size: 3rem;
+}
 ol, ul {
     list-style: none;
 }
